# STaD_lw2_PrimeNumbs_MSVS

./: .gitignore  CMakeLists.txt  PrimeNumbs.sln  README.md  main.cpp
PrimeNumbs/: CMakeLists.txt  PrimeNumbs.cpp  PrimeNumbs.vcxproj  PrimeNumbs.vcxproj.filters  PrimeNumbsKPEq.cpp  PrimeNumbsKPEq.h  packages.config
PrimeNumbs/bench/: CMakeLists.txt  PrimeNumbs.cpp  PrimeNumbsBench.cpp
PrimeNumbsKPEq_gtest/: PrimeNumbsKPEq_gtest.vcxproj  packages.config  test.cpp
PrimeNumbsUnitTests/: PrimeNumbsUnitTests.cpp  PrimeNumbsUnitTests.vcxproj  PrimeNumbsUnitTests.vcxproj.filters
Report files/: Bench_A_1.csv  Bench_A_1_secHalf.csv  Bench_A_2.csv  Bench_A_2_secHalf.csv  Bench_A_3.csv  Bench_A_3_Probe.csv  Bench_A_3_secHalf.csv  Bench_B.csv  probe.csv  probe2.csv
Report files/LinReports/: BenchB_Lin.csv  BenchB_Lin.ods
Report files/MainReports/: BenchB_LinAndWin.ods
Report files/WinReports/: brute_2pow_0_16_qua1.csv  brute_2pow_0_16_qua4.csv  miller_2pow_0_16_qua1.csv  miller_2pow_0_16_qua2.csv  miller_2pow_0_16_qua3.csv  miller_2pow_0_16_qua4.csv  miller_optim_2pow_0_16_qua2.csv  miller_optim_2pow_0_16_qua3.csv
Report files/WinReports/ODS/: brute_2pow_0_16_qua1.ods  brute_2pow_0_16_qua3.ods  miller_2pow_0_16_qua1.ods  miller_2pow_0_16_qua2.ods  miller_2pow_0_16_qua4.ods  miller_optim_2pow_0_16_qua1.ods  miller_optim_2pow_0_16_qua4.ods
Report files/this/: brute_2pow_0_16_qua2.csv  brute_2pow_0_16_qua3.csv  miller_optim_2pow_0_16_qua1.csv  miller_optim_2pow_0_16_qua4.csv  two_pow16minus1_to_pow32minus1.csv  two_pow16plus1_to_pow32plus1.csv
Report files/this/ODS/: brute_2pow_0_16_qua2.ods  brute_2pow_0_16_qua4.ods  miller_2pow_0_16_qua3.ods  miller_optim_2pow_0_16_qua2.ods  miller_optim_2pow_0_16_qua3.ods
